--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #121212;
+  background-color: #670D2F;
   color: white;
 }
 #setup,
